# datachat

./: .gitignore  README.md  ai-plugin.json  pyproject.toml  test.sh
app/: app.py  db.py  logs.py  settings.py  utils.py
app/handlers/: exception_handler.py
app/middlewares/: logging_middleware.py  trailing_slash_middleware.py
app/models/: amazon.py  cnn.py  ebay.py  medium.py  numeric.py  pydantic_models.py  reddit.py  test.ipynb  yelp.py
app/routes/: data_router.py  helloworld_router.py  scraper_router.py  well_known_router.py
tests/: test_routes.py
