[tool.poetry]
name = "datachat"
version = "0.1.0"
description = ""
authors = ["Sulaiman Ghori <sulaiman.ghori@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
