[tool.poetry]
name = "HyperData"
version = "0.1.0"
description = ""
authors = ["Sulaiman Ghori <sulaiman.ghori@outlook.com>", "Judah Cooper <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
toml = "^0.10.2"
pydantic = "^1.10.8"
cryptography = "^40.0.2"
psycopg2 = "^2.9.6"
pytest = "^7.3.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
